version 2.2.8 / 09.01.2023
* Improve the code quality

version 2.2.6.2 / 05.01.2023
* Add 5 new end game shop items

version 2.2.6.1 / 02.01.2023
* Fix a few bugs caused by the performance update
* Add a toolip which contains the requirements for hero jobs.

version 2.2.6 / 01.01.2023
* Greatly improve the performance of the game by ~2x

version 2.2.5 / 01.01.2023
* Buffed Faint Hope, now affected by time Warping
* Add another Dark Matter shop upgrade
* Fix a few small bugs and add more formatting
* Slightly increase the xp cost of jobs and skills past 1e280
* Buff a few Dark Matter skills

version 2.2.4 / 31.12.2022
* Add 2 new milestones
* Do not render when the game is not visible (still gain progress)
* Fix minor spelling mistakes and bugs
* Clean up the code
* Add goals to challenges
* Format the Effect column when the numbers get too large

version 2.2.3 / 29.12.2022
* Added 6 new skills
* Added 2 new shop items
* Added 4 new milestones
* Added a new Dark Matter mechanic
* Rebalance the items from the Dark Matter shop

version 2.2.2 / 26.12.2022
* Jobs and skills can now continue past infinity (1e305)

version 2.2.1 / 25.12.2022
* Added Medieval, Extended, British and Modern coin display options
* Fix a few small bugs

version 2.2 / 25.12.2022
* Added Dark Matter and Dark Orbs
* Removed the games completed boosts
* Made challenges even stronger!

version 2.1.17 / 18.12.2022
* Add a fifth challenge and rework the previous ones
* Fix a few spelling mistakes

version 2.1.16 / 02.12.2022
* fix loading old saves

version 2.1.15 / 30.11.2022
* challenges now give rewards only on exit
* show current challenge reward correctly
* fixed rounding up values (now they shown rounding down)

version 2.1.14a / 29.11.2022
* bugfix: reset challenge rewards on game completion

version 2.1.14 / 29.11.2022
* 4 challenges are added
* Fix spelling and grammar in various tooltips
* New color scheme for colorblind people (Blue-yellow color blindness)

version 2.1.13 / 27.11.2022