@@ -530,6 +530,21 @@
 												</div>
 												<div style="color:gray; padding-bottom: 0.5em;">Cost: <b>10k</b> <span style="color: rgb(114, 83, 182)">Dark Matter</span></div>
 											</div>
+											<div style="padding-top:2em">
+												<div class="text-caption dark-matter-title">Explosion of the universe</div>
+												<div style="color:gray; padding-bottom:0.3em">
+													<button id="explosionOfTheUniverse1" class="w3-button button" onclick="buyExplosionOfTheUniverse(1)">Buy</button> - 
+													Multiply <span style="color:rgb(255, 204, 102)">all XP</span> gain by <b>1e100x</b>, 
+													but divide <span style="color: rgb(24, 210, 217)">Essence</span> gain by <b>2x</b>
+												</div>
+												<div style="color: rgb(255, 255, 255); padding: 0.6em">OR</div>
+												<div style="color:gray; padding-bottom:0.3em">
+													<button id="explosionOfTheUniverse2" class="w3-button button" onclick="buyExplosionOfTheUniverse(2)">Buy</button> - 
+													Multiply <span style="color:rgb(255, 204, 102)">all XP</span> gain by <b>1e150x</b>, 
+													but divide <span style="color: lightgreen;">Income</span> by <b>1e6x</b>
+												</div>
+												<div style="color:gray; padding-bottom: 0.5em;">Cost: <b>100k</b> <span style="color: rgb(114, 83, 182)">Dark Matter</span></div>
+											</div>
 										</div>
 									</div>
 								</div>
